--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@ timezone: Asia/Shanghai
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: Yousri Ben taghalline                          # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: Enjoying learning DevOps and Cloud, this is where i document some of my discovries   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  Youssri, yousri ben taghalline, DevOps Azure terraform how to.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: 'https://yousribentaghalline.me'
@@ -66,7 +66,7 @@ theme_mode:   # [light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-img_cdn: 'https://chirpy-img.netlify.app'
+img_cdn: 'https://yousribentaghalline.me/assets'
 
 # the avatar on sidebar, support local or CORS resources
 avatar: '/commons/avatar.jpg'
